# raiflowv2-backend

./: .pdm-python  db.sqlite3  pyproject.toml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py
railflow/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
railflow/migrations/: 0001_initial.py  0002_rename_descrption_cargotype_description.py  0003_train.py  0004_alert.py  0005_alertcard.py  0006_reasoninspection_reasonmaintenance_inspection_and_more.py  0007_company_order.py  0008_alter_company_cnpj_alter_company_email_and_more.py  0009_alter_company_phone.py  0010_station.py  0011_alter_order_destination_alter_order_origin.py
